# bg3se-macos

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  README.md  ROADMAP.md  example.mcp.json
.claude/agents/: log-monitor.md
agent_docs/: acceleration.md  api-status.md  architecture.md  debugging-strategies.md  development.md  ghidra.md  meridian-persona.md  reference.md
docs/: CHANGELOG.md  CRASH_ANALYSIS.md  INDEX.md  README.md  api-reference.md  architecture.md  crash-attribution.md  development.md  getting-started.md  harness.md  reverse-engineering.md  supported-mods.md  throwdamageevent-re-strategies.md  troubleshooting.md
docs/archive/: COMPONENT_NIL_ROOT_CAUSE.md
docs/bugs/: INDEX.md  headless-boot-bugs.md  headless-boot-debug-log.md  headless-cli-goal-progress.md  noesis-input-bypass-re.md  true-headless-feasibility.md
docs/plans/: 2026-03-27-001-feat-bg3se-autonomous-test-harness-plan.md  2026-03-28-001-feat-bg3se-cli-autonomous-pipeline-expansion-plan.md  2026-03-30-001-feat-bg3se-harness-modding-toolkit-plan.md  2026-03-31-001-fix-open-crashes-build-autoresearch-plan.md  2026-03-31-002-feat-menu-automation-mod-manager-plan.md  2026-03-31-003-feat-unified-parity-modcompat-cli-expansion-plan.md  2026-04-01-001-feat-qedeshot-parity-swarm-plan.md  2026-05-16-001-fix-mod-state-reconciliation-hotbar-crash-plan.md  codex-planner-cli-expansion.md
docs/re/: INDEX.md  global-singletons.md
docs/solutions/: tag-component-acceleration.md
ghidra/: ENTITY_OFFSETS.md  OFFSETS.md  analyze_funcdef_struct.py  find_entity_offsets.py  find_osiris_offsets.py
ghidra/offsets/: CLI_FLAGS.md  COMPONENTS.md  COMPONENT_DATABASE.md  ENTITY_SYSTEM.md  FUNCTORS.md  GAMESTATE.md  GLOBALSTRINGTABLE.md  INDEX.md  LOCALIZATION.md  NETWORKING.md  OSIRIS_FUNCTIONS.md  PHYSICS_LEVEL.md  README.md  STATICDATA.md  STATICDATA_MANAGERS.md  STATS.md  STDSTRING_ABI.md
ghidra/scripts/: README.md  analyze_entity_storage.py  analyze_eocserver_startup.py  analyze_featmanager.py  analyze_get_spell_prototype.py  analyze_lsresult_return.py  decompile_getcomponent.py  find_component_strings.py  find_entity_offsets.py  find_eoc_getcomponent.py  find_eocserver_global.py  find_eocserver_singleton.py  find_gamestate_manager.py  find_getrawcomponent.py  find_getrawcomponent_v2.py  find_getrawcomponent_v3.py  find_getrawcomponent_v4.py  find_modifier_attributes.py  find_property_access.py  find_sdm_global.py  find_singleton_store.py  find_spell_manager_callers.py  find_spell_status_managers.py  find_status_manager.py  find_uuid_mapping.py  optimize_analysis.py  quick_component_search.py  run_analysis.sh
lib/fishhook/: fishhook.c  fishhook.h
plans/: complete-imgui-issue-36.md  find-getrawcomponent-ghidra.md  fix-function-caching-and-typeid-discovery.md  fix-imgui-mouse-input.md  ghidra-script-modifier-attribute-discovery.md  i13-osi-db-filtered-queries.patch  implement-custom-osiris-functions.md  implement-gamestatechanged-event.md  implement-timer-api.md  issue-2-component-discovery.md  issue-29-enum-bitfield-types.md  issue-30-expand-component-properties.md  issue-66-crash-fix-v0.36.39.md  testing-advanced.md  unexplored-re-techniques.md
plans/completed/: deep-audit-acceleration-plan.md  fix-staticdata-getall.md  implement-ext-template.md  issue-33-component-expansion.md  overlay-tab-click-crash-review.md  testing-optimization.md
plans/reference/: unexplored-re-techniques.md
scripts/: bg3-wrapper.sh  bg3w-intel.sh  bg3w.sh  build.sh  launch_via_steam.sh  rebuild.sh  test_components.lua
scripts/re/: README.md  disasm_targets.py  disasm_wide.py  find_adrp_refs.py  find_adrp_refs_v2.py  find_dispatch.py  find_processmsg.py  find_string_ptrs.py
src/audio/: audio_manager.c  audio_manager.h
src/console/: console.c  console.h
src/core/: crashlog.c  crashlog.h  logging.c  logging.h  mach_exception.c  mach_exception.h  safe_memory.c  safe_memory.h  version.h  version_detect.c  version_detect.h
src/entity/: arm64_call.c  arm64_call.h  component_lookup.c  component_lookup.h  component_offsets.h  component_property.c  component_property.h  component_registry.c  component_registry.h  component_templates.h  component_typeid.c  component_typeid.h  entity_events.c  entity_events.h  entity_storage.h  entity_system.c  entity_system.h  generated_component_registry.c  generated_typeids.h  guid_lookup.c  guid_lookup.h
src/enum/: bitfield_lua.c  enum_definitions.c  enum_ext.c  enum_lua.c  enum_registry.c  enum_registry.h
src/game/: game_state.c  game_state.h
src/hooks/: osiris_hooks.c  osiris_hooks.h
src/imgui/: imgui_input_hooks.h  imgui_input_hooks.mm  imgui_metal_backend.h  imgui_metal_backend.mm  imgui_objects.c  imgui_objects.h
src/injector/: main.c
src/input/: input.h  input_hooks.m
src/level/: level_manager.c  level_manager.h
src/lifetime/: lifetime.c  lifetime.h
src/localization/: localization.c  localization.h
src/lua/: lua_audio.c  lua_audio.h  lua_debug.c  lua_debug.h  lua_events.c  lua_events.h  lua_ext.c  lua_ext.h  lua_imgui.c  lua_imgui.h  lua_json.c  lua_level.c  lua_level.h  lua_localization.c  lua_localization.h  lua_net.c  lua_osiris.c  lua_osiris.h  lua_persistentvars.c  lua_persistentvars.h  lua_staticdata.c  lua_stats.c  lua_template.c  lua_timer.c  lua_timer.h
src/math/: lua_math.c
src/mod/: mod_loader.c
src/network/: callback_registry.c  callback_registry.h  extender_message.c  extender_message.h  extender_protocol.c  extender_protocol.h  message_bus.c  message_bus.h  net_hooks.c  net_hooks.h  network_backend.c  network_backend.h  peer_manager.c  peer_manager.h  protocol.h
src/osiris/: custom_functions.c  custom_functions.h  osiris_functions.c  osiris_functions.h  osiris_types.h  pattern_scan.c  pattern_scan.h
src/overlay/: overlay.h  overlay.m
src/pak/: pak_reader.c  pak_reader.h
src/stats/: functor_hooks.c  (+6 more)
test-mods/: MoreReactiveCompanions_Configurable.pak
tools/: bg3se-console.c  extract_pak.py  generate_tanit_svg.py  style_tanit_svg.py
tools/imgui_test/: CMakeLists.txt  main.mm
tools/imgui_test/test_scripts/: basic.lua  demo.lua
(+85 files in other folders)
